# packet-trace-research

./: .gitignore  Makefile  NOTES.md  README.md  configure  tcpdpriv.0.txt  tcpdpriv.1  tcpdpriv.vtml
AnonymizedPackets/: netcat_tcpdpriv_anon.pcapng
AnonymizedPackets/tcpmkpub/: netcat_tcpmkpub_v1_anon.pcapng  netcat_tcpmkpub_v3_anon.pcapng
AnonymizedPackets/tcpurify/: netcat_tcpurify_anon.pcapng  netcat_tcpurify_nullify_anon.pcapng  netcat_tcpurify_table_anon.pcapng
AnonymizedPackets/tcpurify/mapfiles/: netcat_map.map
PTR-Documents/: PTR-Intro.md  PTR-Log.md  PTR-Methodology.md  PTR-Notes.md  PTR-Questions.md  PTR-Resources.md  PTR-Table.md  PTR-Testing.md
tcpdpriv-1.1.11/: INSTALL  Makefile.in  attack50.ps  attack50.tex  tcpdpriv.0  tcpdpriv.c  tcpdpriv.html  tcpdutil.c
tcpdpriv-1.1.11/attack50/: attack50.html
tcpmkpub-0.1/: AUTHORS  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  config.h  config.h.in  config.status  configure  configure.ac
tcpmkpub-0.1/local-policy/: filter.anon  scanner.anon  special.anon  topology.anon
tcpmkpub-0.1/policy/: arp.anon  ether-data.anon  ether.anon  icmp-context.anon  icmp-data.anon  icmp-echo.anon  icmp-ireq.anon  icmp-maskreq.anon  icmp-paramprob.anon  icmp-redirect.anon  icmp-routersolicit.anon  icmp-tstamp.anon  icmp.anon  ip-data.anon  ip-frag.anon  ip-option.anon  ip.anon  tcp-option.anon  tcp.anon  udp.anon
tcpmkpub-0.1/src/: A49.cc  A49.h  A50.cc  A50.h  AEnt.cc  AEnt.h  ARP.cc  ARP.h  ASubnet.cc  ASubnet.h  Anon.h  ConstChecker.h  DataProcessor-inl.h  DataProcessor.cc  DataProcessor.h  EtherAddr.cc  EtherAddr.h  Ethernet.cc  Ethernet.h  FieldType.h  Hash.h  ICMP.cc  ICMP.h  IP.cc  IP.h  IPAddr.cc  IPAddr.h  IPAnon.h  Main.cc  Makefile  Makefile.am  Makefile.in  Packet.cc  Packet.h  Prefix.cc  Prefix.h  PrefixTree.h  RPerm.cc  RPerm.h  Scanner.cc  (+17 more)
tcpmkpub-0.1/src/.deps/: tcpmkpub-DataProcessor.Po  tcpmkpub-Main.Po  tcpmkpub-Packet.Po  tcpmkpub-TCPMkPub.Po  tcpmkpub-Topology.Po
tcpmkpub-0.1/tools/: run_tcpmkpub
tcpurify-0.11.2/: .cvsignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  autogen.sh  capture.c  capture.h  config.h  config.h.in  config.status  configure  configure.in  dump.c  encode_none.c  encode_none.h  encode_nullify.c  encode_nullify.h  encode_table.c  encode_table.h  encodings.c  main.c  tcpurify  tcpurify.h  timeval.c  timeval.h
tcpurify-0.11.2/.deps/: capture.Po  dump.Po  encode_none.Po  encode_nullify.Po  encode_table.Po  encodings.Po  main.Po  timeval.Po
tcpurify-0.11.2/config/: .cvsignore
tcpurify-0.11.2/config/CVS/: Entries  Repository  Tag
tcpurify-0.11.2/tests/: run_tests
tcpurify-0.11.2/tests/CVS/: Entries  Repository
tcpurify-0.11.2/tests/scripts/: functions  none.sh  table.sh
tcpurify-0.11.2/tests/scripts/CVS/: Entries  Repository  Root
